--- a/index.html
+++ b/index.html
@@ -17,28 +17,16 @@
         emailjs.init("user_St3iP7NjtEKBn68bMclv9");
 })();
     </script>
-    
 </head>
 <body>
     
-
-
-
 <div class="home-box custom-box ">
-    <h3>Instruction:</h3>
+    <h1>Strategic Finance Quiz</h1>
     <p>Total number of questions: <span class="total-question"></span></p>
     <button type="button" class="btn" onclick="startQuiz()">Start Quiz</button>
 </div>
 
 <div class="quiz-box custom-box hide">
-    <div class="hud-item">
-        <p class="hud-prefix">
-            Score
-        </p>
-        <h1 class="hud-main-text" id="total-correct">
-            0
-        </h1>
-    </div>
     <div class="question-number">
     </div>
     <div class="question-text">
@@ -66,7 +54,7 @@
             </td>
         </tr>
         <tr>
-            <td class="lbl"><label for="dob">Message:</label></td>
+            <td class="lbl"><label for="message">Message:</label></td>
             <td><textarea rows="3" cols="25" id="msg" placeholder="Enter your message"></textarea>
             </td>
         </tr>
