--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <body>
     
 <div class="home-box custom-box ">
-    <h1>Engligh Quiz For Tony</h1>
+      <h1>Quiz For Tony</h1>
+      <h1>请翻译成英文 </h1>
     <p>Total number of questions: <span class="total-question"></span></p>
     <button type="button" class="btn" onclick="startQuiz()">Start Quiz</button>
 </div>
